# protolib

./: .gitmodules  CMakeLists.txt  README.md
core/: Connection.cpp  Connection.h  MsgDispatcher.cpp  MsgDispatcher.h  MsgManager.cpp  MsgManager.h  ProtoUtils.cpp  ProtoUtils.h  Type.h  noncopyable.h
example/: CMakeLists.txt  protolib_example.cpp
example/proto/: AppMsg.proto
example/proto/cpp/: AppMsg.pb.cc  AppMsg.pb.h
proto/: Msg.proto
proto/cpp/: Msg.pb.cc  Msg.pb.h
scripts/: update_proto.sh
src/: Connection.cpp  Connection.h  Exception.h  MsgDispatcher.cpp  MsgDispatcher.h  MsgManager.cpp  MsgManager.h  MsgUtils.cpp  MsgUtils.h  ProtoUtils.h  Type.h
src/coder/: Coder.cpp  Coder.h  ProtoCoder.cpp  ProtoCoder.h
